--- a/css/keuze.css
+++ b/css/keuze.css
@@ -7,18 +7,23 @@ html, body {
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #6e8efb;
     text-align: center;
 }
 
 section {
     background-color: #18214e;
-    text-align: left;
+    text-align: center;
     box-shadow: 5px 10px 18px #000000;
     border-radius: 15px;
     padding: 4%;
     margin-bottom: 5%;
     color: #ffffff;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #rechts section {
@@ -45,13 +50,14 @@ section {
     background-color: #b4b1b1;
     border: none;
     border-radius: 6px;
-    width: 15%;
-    height: 5%;
+    width: 50%;
+    max-width: 200px;
+    height: auto;
     font-size: 15px;
     font-family: 'Raleway', sans-serif;
     transition: 0.3s;
-    margin-top: 4px;
-    padding: 3%;
+    margin-top: 10px;
+    padding: 10px 20px;
 }
 
 .button:hover {
