--- a/css/kilometers.css
+++ b/css/kilometers.css
@@ -54,3 +54,33 @@ body {
     background-color: #45a049;
   }
   
+
+  #location-popup {
+    background-color: white;
+    border: 2px solid #4CAF50;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+  }
+  
+  #location-popup button {
+    margin: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color: #4CAF50;
+    color: white;
+    transition: background-color 0.3s ease;
+  }
+  
+  #location-popup button:hover {
+    background-color: #45a049;
+  }
+  
